--- a/style/styles.css
+++ b/style/styles.css
@@ -37,7 +37,7 @@ header {
 .navigation a {
     position: relative;
     font-size: 1.1em;
-    color: #fff;
+    color: #242E49;
     text-decoration: none;
     font-weight: 500;
     margin-right: 40px;
@@ -50,7 +50,7 @@ header {
     bottom: -6px;
     width: 100%;
     height: 3px;
-    background: #fff;
+    background: #242E49;
     border-radius: 5px;
     transform-origin: right;
     transform: scaleX(0);
@@ -72,12 +72,12 @@ header {
     height: 50px;
     margin-right: 40px;
     background: transparent;
-    border: 2px solid #fff;
+    border: 2px solid #242E49;
     outline: none;
     border-radius: 6px;
     cursor: pointer;
     font-size: 1.1em;
-    color: #fff;
+    color: #242E49;
     font-weight: 500;
     margin-left: 40px;
     transition: .5s;
@@ -85,6 +85,6 @@ header {
 
 .navigation .btnLogin-popup:hover {
     background-color: #fff;
-    color: #9400d3;
+    color: #54162B;
 
 }
