--- a/style/styleindex.css
+++ b/style/styleindex.css
@@ -4,4 +4,50 @@
 model-viewer {
     height: 100vh;
     width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+#btnDown {
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 10px 20px;
+    font-size: 16px;
+    background-color: #242E49;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    z-index: 10;
+    transition: background-color 0.3s ease;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
+}
+
+#btnDown:hover {
+    background-color: #fff;
+    color: #B4182D;
+    border: 1px solid #B4182D;
+    box-shadow: 0 6px 16px rgba(0, 0, 0, 0.6);
+}
+
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 100vh;
+    gap: 30px;
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+}
+
+.card {
+    width: 500px;
+    height: 300px;
+    border-radius: 20px;
+    border: none;
+    background-color: black;
 }
