--- a/style/styleindex.css
+++ b/style/styleindex.css
@@ -1,12 +1,19 @@
 #ar-prompt {
     display: none;
 }
-model-viewer {
+
+.container3d {
     height: 100vh;
-    width: 100%;
+    width: 100vw;
+    position: relative;
+}
+model-viewer {
     position: absolute;
     top: 0;
     left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #009ADA;
 }
 
 #btnDown {
@@ -16,38 +23,36 @@ model-viewer {
     transform: translateX(-50%);
     padding: 10px 20px;
     font-size: 16px;
-    background-color: #242E49;
+    backdrop-filter: blur(50px);
+    background-color: rgba(255, 255, 255, 0.2);
     color: #fff;
     border: none;
-    border-radius: 5px;
+    border-radius: 10px;
     cursor: pointer;
     z-index: 10;
-    transition: background-color 0.3s ease;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.4);
 }
 
 #btnDown:hover {
-    background-color: #fff;
-    color: #B4182D;
-    border: 1px solid #B4182D;
-    box-shadow: 0 6px 16px rgba(0, 0, 0, 0.6);
+    border: 2px solid #fff;
+    box-shadow: 0 16px 64px rgba(255, 255, 255, 0.8);
 }
 
 .container {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     align-items: center;
-    margin-top: 100vh;
-    gap: 30px;
+    gap: 20px;
     width: 100vw;
     height: 100vh;
-    overflow: hidden;
+    background-color: #fff;
 }
 
-.card {
-    width: 500px;
-    height: 300px;
-    border-radius: 20px;
-    border: none;
+.container .card {
+    margin-top: 60px;
+    width: 650px;
+    height: 350px;
     background-color: black;
+    border-radius: 20px;
 }
