--- a/style/styles.css
+++ b/style/styles.css
@@ -9,9 +9,6 @@ html {
     scroll-behavior: smooth;
 }
 
-body {
-    overflow: hidden;
-}
 
 header {
     position: fixed;
@@ -36,15 +33,10 @@ header {
 .navigation a {
     position: relative;
     font-size: 1.1em;
-    color: #242E49;
+    color: #fff;
     text-decoration: none;
     font-weight: 500;
     margin-right: 40px;
-}
-
-.navigation a:hover {
-    color: #B4182D;
-    transition: .4s;
 }
 
 .navigation a::after {
@@ -54,7 +46,7 @@ header {
     bottom: -6px;
     width: 100%;
     height: 3px;
-    background: #242E49;
+    background: #fff;
     border-radius: 5px;
     transform-origin: right;
     transform: scaleX(0);
@@ -72,12 +64,12 @@ header {
     height: 50px;
     margin-right: 40px;
     background: transparent;
-    border: 2px solid #242E49;
+    border: 2px solid #fff;
     outline: none;
     border-radius: 6px;
     cursor: pointer;
     font-size: 1.1em;
-    color: #242E49;
+    color: #fff;
     font-weight: 500;
     margin-left: 40px;
     transition: .5s;
@@ -85,6 +77,6 @@ header {
 
 .navigation .btnLogin-popup:hover {
     background-color: #fff;
-    color: #B4182D;
-    border: 2px solid #B4182D;
+    color: black;
+    border: 2px solid black;
 }
