--- a/style/styleindex.css
+++ b/style/styleindex.css
@@ -2,6 +2,10 @@
     display: none;
 }
 
+body {
+    background: linear-gradient(135deg, #74b9ff,#5fa8e6,#3d84b8,#2a598b);
+    background-repeat: no-repeat;
+}
 .container3d {
     height: 100vh;
     width: 100vw;
@@ -13,7 +17,6 @@ model-viewer {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #009ADA;
 }
 
 #btnDown {
@@ -40,19 +43,71 @@ model-viewer {
 
 .container {
     display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    align-items: center;
-    gap: 20px;
-    width: 100vw;
-    height: 100vh;
-    background-color: #fff;
+    align-items: flex-start;
+    justify-content: space-between;
+    gap: 40px;
+    width: 100%;
+    height: 300vh;
 }
 
-.container .card {
-    margin-top: 60px;
-    width: 650px;
-    height: 350px;
-    background-color: black;
-    border-radius: 20px;
+.cards-column {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    margin-left: 150px;
+    flex: 1;
 }
+
+.card {
+    position: relative;
+    width: 500px;
+    height: 580px;
+    overflow: hidden;
+    margin-top: 60px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    transition: transform 0.3s;
+}
+
+.card img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: transform 0.3s;
+}
+
+.card:hover img {
+    transform: scale(1.1);
+}
+
+.card .text-box {
+    position: absolute;
+    bottom: -50px;
+    left: 0;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    text-align: center;
+    padding: 10px;
+    font-size: 16px;
+    transition: bottom 0.3s;
+}
+
+.card:hover .text-box {
+    bottom: 0;
+}
+
+.text-content {
+    margin-top: 60px;
+    flex: 1;
+    max-width: 400px;
+  }
+
+  .text-content h1 {
+    margin-top: 0;
+  }
+
+  .text-content p {
+    line-height: 1.6;
+  }
