--- a/style/styleindex.css
+++ b/style/styleindex.css
@@ -3,7 +3,13 @@
 }
 
 body {
-    background: linear-gradient(135deg, #74b9ff,#5fa8e6,#3d84b8,#2a598b);
+    background: linear-gradient(
+  90deg,
+  #ffebeb 0%,        
+  #ffd6d6 25%,       
+  #ff4d4d 50%,       
+  #660000 75%        
+);
     background-repeat: no-repeat;
 }
 .container3d {
