--- a/style/stylecontact.css
+++ b/style/stylecontact.css
@@ -14,6 +14,8 @@ body {
   width: 720px;
   height: 920px;
   border: none;
+  border-radius: 40px;
+  margin-left: 50px;
   transition: .5s;
 }
 
@@ -24,6 +26,7 @@ body {
 }
 
 .container-img img {
+  border-radius: 40px;
   width: 100%;
   height: 100%;
 }
@@ -87,7 +90,7 @@ body {
   align-items: center;
   margin-top: 20px;
   margin-right: 50px;
-  transition: .5s;
+  transition: .3s;
 }
 
 .container-right-text i:hover {
