--- a/style/stylecontact.css
+++ b/style/stylecontact.css
@@ -11,8 +11,9 @@ body {
 }
 
 .container-img {
+  margin-top: 30px;
   width: 720px;
-  height: 920px;
+  height: 820px;
   border: none;
   border-radius: 40px;
   margin-left: 50px;
