--- a/style/styleindex.css
+++ b/style/styleindex.css
@@ -2,6 +2,10 @@
     display: none;
 }
 
+#ar-button {
+    display: none;
+}
+
 body {
     background: linear-gradient(
   90deg,
@@ -53,7 +57,6 @@ model-viewer {
     justify-content: space-between;
     gap: 40px;
     width: 100%;
-    height: 300vh;
 }
 
 .cards-column {
