--- a/style/styles.css
+++ b/style/styles.css
@@ -19,6 +19,60 @@ html {
       );
 }
 
+.hamburger-menu {
+    display: flex;
+    flex-direction: column;
+    width: 30px;
+    height: 25px;
+    justify-content: space-between;
+    cursor: pointer;
+  }
+  
+  .bar {
+    height: 5px;
+    background-color: #fff;
+    border-radius: 3px;
+    transition: .3s;
+  }
+  
+  .navigationResponsive {
+    display: none;
+    justify-content: space-between;
+    align-items: center;
+    background-color: red;
+    padding: 10px 20px;
+  }
+  
+  .navigationResponsive a,
+  .navigationResponsive button {
+    color: white;
+    text-decoration: none;
+    padding: 10px;
+    font-size: 16px;
+  }
+  
+  .navigationResponsive a:hover,
+  .navigationResponsive button:hover {
+    background-color: red;
+    border-radius: 20px;
+  }
+  
+
+  .nav-links {
+    display: flex;
+    backdrop-filter: blur(5px);
+  }
+  
+  .nav-links a,
+  .nav-links button {
+    margin-left: 20px;
+  }
+  
+  .nav-links.active {
+    display: block;
+    text-align: center;
+  }
+
 header {
     position: fixed;
     top: 0;
@@ -193,3 +247,18 @@ header {
     background: linear-gradient(to bottom, black, #f0f0f0, #dcdcdc, #b0b0b0);
     box-shadow: 0 0 50px 0px rgba(255, 255, 255, 0.6);
   }
+
+.Responh2 {
+    margin-top: 0px;
+    font-size: 3rem;
+    color: #fff;
+    font-variant: small-caps;
+    display: none;
+    justify-content: center;
+    align-items: center;
+}
+
+.Responh2:hover {
+    color: black;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.6);
+}
