--- a/style/styles.css
+++ b/style/styles.css
@@ -39,7 +39,7 @@ html {
     display: none;
     justify-content: space-between;
     align-items: center;
-    background-color: red;
+    background-color: transparent;
     padding: 10px 20px;
   }
   
@@ -53,7 +53,7 @@ html {
   
   .navigationResponsive a:hover,
   .navigationResponsive button:hover {
-    background-color: red;
+    color: black;
     border-radius: 20px;
   }
   
