--- a/style/styleproducts.css
+++ b/style/styleproducts.css
@@ -10,22 +10,21 @@ body {
     flex-direction: column;
     align-items: center;
     transition: .3s;
+    max-height: 400vh;
 }
 
 .cardproducts {
     display: flex;
+    position: relative;
     align-items: center;
-    margin-bottom: 60px;
+    margin-top: 70px;
+    margin-bottom: 30px;
     width: 960px;
     height: 320px;
     border: none;
     border-radius: 40px;
     background: linear-gradient(135deg, #ff0000, #ff6600, #cc3300);
     transition: .3s;
-}
-
-#firstcard {
-    margin-top: 70px;
 }
 
 .cardproducts:hover {
@@ -71,4 +70,117 @@ body {
     margin-left: 20px;
     font-size: 1.1rem;
     font-weight: 500;
+}
+
+.create-card {
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    max-width: 20%;
+    top: 80px;
+    left: 50px;
+    background: linear-gradient(135deg, #ff0000, #ff6600, #cc3300);
+    backdrop-filter: blur(30px);
+    border: none;
+    font-weight: 700;
+    padding: 10px 20px;
+    border-radius: 40px;
+    cursor: pointer;
+    z-index: 10;
+    transition: 1s;
+}
+
+.create-card:hover {
+    -webkit-box-shadow: 0px 0px 20px 13px rgba(0,0,0,0.8);
+    -moz-box-shadow: 0px 0px 20px 13px rgba(0,0,0,0.8);
+    box-shadow: 0px 0px 20px 13px rgba(0,0,0,0.8);
+}
+
+#carButton {
+    background-color: transparent;
+    border: none;
+    color: black;
+    font-variant: small-caps;
+    font-weight: 700;
+    font-size: 1rem;
+    padding: 15px 15px;
+    border-radius: 30px;
+    transition: .5s;
+}
+
+#create-icon {
+    font-weight: 700;
+    padding: 5px;
+    font-size: 1.3rem;
+}
+
+#carButton:hover {
+    color: #fff;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.dataOfCar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    padding: 10px;
+    border: none;
+    border-radius: 20px;
+    background-color: transparent;
+    color: #ffffff;
+}
+
+.dataOfCar::placeholder {
+    color: azure;
+}
+
+.dataOfCar:focus {
+    outline: none;
+}
+
+#delete-icon {
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    font-size: 2rem;
+    color: black;
+    transition: .5s;
+}
+
+#delete-icon:hover {
+    color: #fff;
+}
+
+#file-upload {
+    display: none;
+}
+
+#file-name {
+    color: #fff;
+    font-weight: 700;
+    font-size: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.file-label {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    padding: 10px;
+    background-color: transparent;
+    color: black;
+    border: none;
+    font-size: 1rem;
+    border-radius: 5px;
+    transition: .5s;
+}
+
+.file-label:hover {
+    color: #fff;
 }
